@@ -10,6 +10,10 @@
 
 <UL>
 
+	<H3>New Features</H3>
+
+	<LI>Now support the "subject" meta variable.
+
 	<H3>Changes</H3>
 
 	<LI>Updated the HTML parser to use HTML 4.0 rules for
