@@ -1,7 +1,11 @@
-CHANGES.txt - 03/27/2002
+CHANGES.txt - 04/04/2002
 ------------------------
 
 CHANGES IN HTMLDOC v1.8.19
+
+    NEW FEATURES
+
+	- Now support the "subject" meta variable.
 
     CHANGES
 
